# rst

./: README.md  lifespan.py  main.py  pyproject.toml
api/routes/: files.py
core/: elements.py
db/: documents_repository.py
documents/00a-Treinamento/Cluster 1/: D1_C1_Folha_04-08-2006_07h42 (1) - Ewerson Dantas.rs3  D1_C1_Folha_04-08-2006_07h42 (1) - Jackson Souza.rs3  D1_C1_Folha_04-08-2006_07h42 (1) - LARISSA JESUS SANTA BARBARA.rs3  D1_C1_Folha_04-08-2006_07h42 - TOBIAS JOSE ARAUJO ALMEIDA.rs3
documents/00a-Treinamento/Cluster 2/: D1_C2_Folha_04-08-2006_11h38.rs3 (1) - LARISSA JESUS SANTA BARBARA.rs3  D1_C2_Folha_04-08-2006_11h38.rs3 - Tobias Araújo.rs3
documents/00a-Treinamento/Cluster 3/: D1_C3_Folha_19-07-2007_21h05.rs3 (2) - Ewerson Dantas.rs3  D1_C3_Folha_19-07-2007_21h05.rs3(1) - Naira Gama.rs3
documents/00b-Concordância geral/1ª concordância geral/: D2_C16_Estadao_21-08-2006 (1) - Ewerson Dantas.rs3  D2_C16_Estadao_21-08-2006 (1) - Jackson Souza.rs3  D2_C16_Estadao_21-08-2006 (2) - mateus araújo.rs3  D2_C16_Estadao_21-08-2006 - LARISSA JESUS SANTA BARBARA.rs3  D2_C16_Estadao_21-08-2006(1) - Naira Gama.rs3  D2_C16_Estadao_21-08-2006Paula - Paula Cardoso.rs3  TOBIAS ARAUJO_D2_C16_Estadao_21-08-2006 - Tobias Araújo.rs3
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/assets/: style.css
rst-visualizer/: README.md  index.html  package-lock.json  package.json  tsconfig.json
rst-visualizer/src/: App.vue
tests/: test_api.py  test_core.py
(+177 files in other folders)
