[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rs3-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["core", "api", "db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
test = "pytest:main"

[tool.uv.scripts]
test = "pytest"
test-parallel = "pytest -n auto"
test-verbose = "pytest -v"
test-parallel-verbose = "pytest -v -n auto"
test-api = "pytest tests/test_api.py -v -n auto"
test-file = { cmd = "pytest {args} -v" }
test-file-parallel = { cmd = "pytest {args} -v -n auto" }
